// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StatusBadge Snapshot Tests should match snapshot for canceled status 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 4,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      {
        "backgroundColor": "#EF4444",
      },
      false,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "700",
          "letterSpacing": 0.5,
        },
        {
          "color": "#F8FAFC",
        },
        false,
      ]
    }
  >
    CANCELLED
  </Text>
</View>
`;

exports[`StatusBadge Snapshot Tests should match snapshot for delivered status 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 4,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      {
        "backgroundColor": "#16A34A",
      },
      false,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "700",
          "letterSpacing": 0.5,
        },
        {
          "color": "#F8FAFC",
        },
        false,
      ]
    }
  >
    DELIVERED
  </Text>
</View>
`;

exports[`StatusBadge Snapshot Tests should match snapshot for in_transit status 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 4,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      {
        "backgroundColor": "#3B82F6",
      },
      false,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "700",
          "letterSpacing": 0.5,
        },
        {
          "color": "#F8FAFC",
        },
        false,
      ]
    }
  >
    IN TRANSIT
  </Text>
</View>
`;

exports[`StatusBadge Snapshot Tests should match snapshot for large size 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 4,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      {
        "backgroundColor": "#F59E0B",
      },
      {
        "borderRadius": 8,
        "paddingHorizontal": 24,
        "paddingVertical": 16,
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "700",
          "letterSpacing": 0.5,
        },
        {
          "color": "#0F172A",
        },
        {
          "fontSize": 18,
          "letterSpacing": 1,
        },
      ]
    }
  >
    PENDING
  </Text>
</View>
`;

exports[`StatusBadge Snapshot Tests should match snapshot for pending status 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 4,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      {
        "backgroundColor": "#F59E0B",
      },
      false,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "700",
          "letterSpacing": 0.5,
        },
        {
          "color": "#0F172A",
        },
        false,
      ]
    }
  >
    PENDING
  </Text>
</View>
`;
